; ModuleID = '/home/carl/AnghaBench/lz4/ossfuzz/extr_round_trip_stream_fuzzer.c_state_free.c'
source_filename = "/home/carl/AnghaBench/lz4/ossfuzz/extr_round_trip_stream_fuzzer.c_state_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @state_free(%struct.TYPE_3__* byval(%struct.TYPE_3__) align 8 %0) #0 {
  %2 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 4
  %3 = load i32, i32* %2, align 8
  %4 = call i32 @cursor_free(i32 %3)
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 3
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @cursor_free(i32 %6)
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 2
  %9 = load i32, i32* %8, align 8
  %10 = call i32 @LZ4_freeStream(i32 %9)
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @LZ4_freeStreamHC(i32 %12)
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = call i32 @LZ4_freeStreamDecode(i32 %15)
  ret void
}

declare dso_local i32 @cursor_free(i32) #1

declare dso_local i32 @LZ4_freeStream(i32) #1

declare dso_local i32 @LZ4_freeStreamHC(i32) #1

declare dso_local i32 @LZ4_freeStreamDecode(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
